<resources>
    <string name="app_name">scratch</string>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Gender</item>
    </string-array>

    <string-array name="Barangay">
        <item>Minuyan III</item>
        <item>Minuyan Proper</item>
        <item>San Rafael I</item>
        <item>Sapang Palay Proper</item>
        <item>Sta. Cruz I</item>
        <item>Sto. Cristo</item>
        <item>Barangay</item>
    </string-array>

    <string name="accRecovMsg">\nCheck your Email for further instructions on how to recover your account.\n\nPlease check your spam and other folders if you don\'t immediately see the email.</string>

    <string name="msg">\nBy clicking SUBMIT you have accepted and agreed to all of our Terms and Conditions.\n</string>

    <string name="tnc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. \n\nIt has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. \n\nIt has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="aboutOffice">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <string name="mission">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="vision">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="operatingHrs">Mondays to Saturdays\n8:00 AM to 5:00 PM</string>

    <string name="contacts">Phone Numbers:\n0933-995-6566 / 0966-318-1892\n\nTelephone Number:\n(044) 3065341\n\nE-mail:\ncityvet20@yahoo.com</string>

    <string name="location">Motorpool, Productivity Center\nBrgy. Sapang Palay Proper\nCity of San Jose del Monte, Bulacan</string>

    <string name="developed">Developed at\nBULACAN STATE UNIVERSITY\nSARMIENTO CAMPUS</string>

    <string name="developers">Belano, Charl Nikki L.\nDagatan. Joshua Miguel V.\nMaloles, Kenjhi P.\nOmay, Mar Alexis O.\nTrinidad, Jireh D.</string>

    <string name="deactMessage">It seems like you are trying to access deactivated account. Activating this account again will require administrator\'s approval.</string>

    <string name="requestDeactivationMessage">Deactivating your account means...\n\n-You may no longer view the adoption listing.\n-Your data and account will not be completely deleted from the database.\n
    -You cannot create another account under the same email address.\n-and Activating your account again will require approval from the administrators.\n\nDo you want to continue?\n</string>

    <!--for timeline-->
    <string-array name="steps">
        <item>Send Request</item>
        <item>Awaiting Approval</item>
        <item>Request Approved</item>
        <item>Set Appointment</item>
        <item>Appointment Confirmed</item>
        <item>Adoption Successful</item>
    </string-array>

    <string name="congrats">Congratulations!</string>
    <string name="sendReqBody">Your request is under review by the City Veterinary Office. Please wait for approval status within 1 to 3 working days.</string>
    <string name="awaitingBody">We have received your request. Please wait for approval status within 1 to 3 working days.</string>
    <string name="reqApprovedHeader">Your request has been APPROVED!</string>
    <string name="reqApprovedBody">Please set an appointment for your City Veterinary Office visit.</string>
    <string name="setAppointmentHeader">Checking the Clinic\'s availability on </string>
    <string name="appointmentConfirmedHeader">Appointment Confirmed!</string>
    <string name="appointmentConfirmedBody1">Your appointment is on </string>
    <string name="appointmentConfirmedBody2">\n\nPlease bring the following:\n\n\t- 2x2 ID Picture\n\t- Cage or Leash\n\t- Valid ID</string>
    <string name="successBody">You have successfully completed the adoption process.</string>

    <string name="body1">Yes, the pets that are available for adoption are in good health and have undergone tests by the City Veterinary Office. </string>
    <string name="body2">There are no costs involved, but be sure you have the necessary prerequisites.</string>
    <string name="body3">For dogs, there is a limit of two that can be adopted, but there is no limit on cats.</string>

</resources>