<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/nighty"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingTop="5dp"
    android:paddingEnd="5dp"
    android:paddingBottom="5dp"
    android:theme="@style/Theme.Scratch.noActionbarAndStatusBar"
    tools:context=".AboutTheOffice">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="10">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:onClick="back"
                    android:src="@drawable/ic_round_arrow_back_ios_24"
                    app:tint="@color/textgray"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:text="About the Office"
                android:textAlignment="center"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="10"
                android:gravity="end">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:tint="@color/textgray"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="15dp"
            android:id="@+id/elementsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="15dp">

            <ImageView
                android:layout_marginTop="15dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/cityet_logo" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="City of San Jose del Monte"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="City Veterinary Office"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutOffice"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mission"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/pastelGreen"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mission"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Vision"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/pastelGreen"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vision"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Operating Hours &amp; Days"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/pastelGreen"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operatingHrs"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contact Us"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/pastelGreen"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textAlignment="center"/>

            <ImageView
                android:id="@+id/facebookImgview"
                android:layout_marginTop="25dp"
                android:layout_width="200dp"
                android:layout_height="38dp"
                android:src="@drawable/facebook_logo"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Location"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/pastelGreen"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>