<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingTop="40dp"
    android:paddingEnd="5dp"
    android:paddingBottom="5dp"
    android:theme="@style/Theme.Scratch.noActionbarAndStatusBar"
    tools:context=".AboutUs">

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="10">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:onClick="back"
                android:src="@drawable/ic_round_arrow_back_ios_24"
                app:tint="@color/whitey"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="About the Developers"
            android:textAlignment="center"
            android:textColor="@color/whitey"
            android:textSize="21sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="10"
            android:gravity="end">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:tint="@color/textgray"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/name_logo_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/aboutOffice"
                android:textAlignment="center"
                android:textColor="@color/whitey"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/developed"
                android:textAlignment="center"
                android:textColor="@color/whitey"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@color/whitey"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/bulus_logo" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@color/whitey"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:src="@drawable/bulsu_logo_sarm" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="DEVELOPERS"
                android:textAlignment="center"
                android:textColor="@color/whitey"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/developers"
                android:textAlignment="center"
                android:textColor="@color/whitey"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="January 20XX"
                android:textAlignment="center"
                android:textColor="@color/whitey"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>